[gd_scene load_steps=3 format=4 uid="uid://dt7ipmc6oubec"]

[ext_resource type="Script" uid="uid://cdpxkg71pwy6j" path="res://scenes/request_notification.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dguurojw0kuio" path="res://textures/icons/trophy.png" id="2"]

[node name="MilestoneNotification" type="PanelContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 580.0
offset_bottom = 110.0
theme_type_variation = &"CurrencyPanel"
script = ExtResource("1")

[node name="NotificationContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Icon" type="TextureRect" parent="NotificationContainer"]
self_modulate = Color(0.567, 0.69465, 0.9, 1)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2")
expand_mode = 1

[node name="InfoContainer" type="VBoxContainer" parent="NotificationContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2

[node name="Label" type="Label" parent="NotificationContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "request_completed"

[node name="Name" type="Label" parent="NotificationContainer/InfoContainer"]
layout_mode = 2
text = "Text Files"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
